[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/DoorCode/Teclado.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/DoorCode/doorcode.gd" type="Script" id=2]
[ext_resource path="res://Scenes/DoorCode/code.tres" type="Theme" id=3]
[ext_resource path="res://Audio/one-shots/Access denied.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/one-shots/Access Granted.wav" type="AudioStream" id=5]
[ext_resource path="res://Scenes/DoorCode/VOLVER1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/DoorCode/VOLVER.png" type="Texture" id=7]
[ext_resource path="res://UI/Pause/pause.tscn" type="PackedScene" id=8]
[ext_resource path="res://Audio/one-shots/Keyboard tap.wav" type="AudioStream" id=9]

[node name="doorcode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="TextureButton" parent="."]
margin_left = 707.981
margin_top = 523.842
margin_right = 777.981
margin_bottom = 593.842
rect_min_size = Vector2( 70, 70 )

[node name="2" type="TextureButton" parent="."]
margin_left = 814.337
margin_top = 523.842
margin_right = 884.337
margin_bottom = 593.842
rect_min_size = Vector2( 70, 70 )

[node name="3" type="TextureButton" parent="."]
margin_left = 920.693
margin_top = 523.842
margin_right = 990.693
margin_bottom = 593.842
rect_min_size = Vector2( 70, 70 )

[node name="4" type="TextureButton" parent="."]
margin_left = 1025.46
margin_top = 523.842
margin_right = 1095.46
margin_bottom = 593.842
rect_min_size = Vector2( 70, 70 )

[node name="5" type="TextureButton" parent="."]
margin_left = 1131.82
margin_top = 523.842
margin_right = 1201.82
margin_bottom = 593.842
rect_min_size = Vector2( 70, 70 )

[node name="6" type="TextureButton" parent="."]
margin_left = 707.981
margin_top = 611.15
margin_right = 777.981
margin_bottom = 681.15
rect_min_size = Vector2( 70, 70 )

[node name="7" type="TextureButton" parent="."]
margin_left = 814.337
margin_top = 611.15
margin_right = 884.337
margin_bottom = 681.15
rect_min_size = Vector2( 70, 70 )

[node name="8" type="TextureButton" parent="."]
margin_left = 920.693
margin_top = 611.15
margin_right = 990.693
margin_bottom = 681.15
rect_min_size = Vector2( 70, 70 )

[node name="9" type="TextureButton" parent="."]
margin_left = 1025.46
margin_top = 611.15
margin_right = 1095.46
margin_bottom = 681.15
rect_min_size = Vector2( 70, 70 )

[node name="0" type="TextureButton" parent="."]
margin_left = 1131.82
margin_top = 611.15
margin_right = 1201.82
margin_bottom = 681.15
rect_min_size = Vector2( 70, 70 )

[node name="Label" type="Label" parent="."]
margin_left = 706.699
margin_top = 357.175
margin_right = 1217.7
margin_bottom = 479.175
custom_colors/font_color = Color( 0.14902, 0.913725, 0.32549, 1 )
text = "1 2 0 4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="correct" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="tap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 61.9086
margin_top = 825.448
margin_right = 300.909
margin_bottom = 1024.45
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" parent="." instance=ExtResource( 8 )]
[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="4" to="." method="_on_4_pressed"]
[connection signal="pressed" from="5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="9" to="." method="_on_9_pressed"]
[connection signal="pressed" from="0" to="." method="_on_0_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
